--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -576,17 +576,12 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 快手极速版签到 = type=cron,cronexpr="35 5 0 * * *",script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js
 Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js,enable=true
 Bilibili签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js, enable=true
-# qq读书
-cron "*/11 * * * *" script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, tag=企鹅读书
-# rrtv
-cron "4 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js
-# 字幕组
-cron "4 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/zimuzu/zimuzu.js
-# 饿了么
-cron "5 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js
-cron "50 23 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemPea.js
-# 美团
-cron "3 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js
+qq读书 = type=cron,cronexpr=*/11 * * * *,script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/qqread.js, tag=企鹅读书
+rrtv = type=cron,cronexpr="4 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js
+字幕组 = type=cron,cronexpr="4 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/zimuzu/zimuzu.js
+饿了么 = type=cron,cronexpr="5 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js
+ELEME = type=cron,cronexpr="50 23 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemPea.js
+美团 = type=cron,cronexpr=cron "3 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js
 
 
 [MITM]
