--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -585,7 +585,7 @@ rrtv = type=cron,cronexpr="4 0 * * *" ,wake-system=1,script-path=https://raw.git
 饿了么 = type=cron,cronexpr="5 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js
 ELEME = type=cron,cronexpr="50 23 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemPea.js
 美团 = type=cron,cronexpr="3 0 * * *" ,wake-system=1,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js
-返利网红包 = type=cron,cronexpr="0 1-16 10 5,9,10,11,12 * *",script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/flwhbziye.js, requires-header=true
+返利网红包 = type=cron,cronexpr="0 1-16 10 5,9,10,11,12 * *",wake-system=1,timeout=20,script-path=https://raw.githubusercontent.com/ziye12/JavaScript/master/flwhbziye.js, requires-header=true
 
 [MITM]
 enable = true
